[metadata]
name = drf-complex-filter
author = Nikita Balobanov
author-email = kit-oz@ya.ru
summary = DRF filter for complex queries.
license = MIT
description-file = README.rst
home-page = https://github.com/kit-oz/django-rest-framework-complex-filter
requires-python = >= 3.3
classifier =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[files]
packages = complex_filter
