[metadata]
name = drf-complex-filter
author = Nikita Balobanov
author-email = kit-oz@ya.ru
summary = DRF filter for complex queries.
license = MIT
description-file = README.rst
home-page = https://github.com/kit-oz/drf-complex-filter
requires-python = >= 3.6
classifier =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3


[files]
packages = drf_complex_filter


[options]
python_requires = >=3.6
install_requires =
    djangorestframework
